[project]
name = "auto-ai-agents-creator"
version = "0.1.0"
description = "auto-ai-agents-creator using Autogen"
authors = [{ name = "Kaushik Paul", email = "kaushik.paul755@gmail.com" }]
requires-python = "==3.12.*"
dependencies = [
    "autogen-agentchat==0.7.5",
    "autogen-core==0.7.5",
    "autogen-ext[anthropic,grpc,openai]==0.7.5",
    "google-cloud-storage==3.3.1",
    "gradio==6.13.0",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
